<resources>
    <string name="app_name">Zhour</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="press_again_to_exit">Press Again to Exit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="empty">empty</string>

    <string name="cancel">Cancel</string>
    <string name="accept_small">accept</string>
    <string name="txt_cd" />
    <string name="next">Next</string>
    <string name="home">Home</string>
    <string name="about_us">About us</string>
    <string name="payment">Payment</string>
    <string name="logout">Logout</string>
    <string name="signup">SignUp</string>
    <string name="jaquline">Jaquline</string>
    <string name="event_invite">event invite</string>
    <string name="submit">Submit</string>
    <string name="invite_note">Invite Note</string>
    <string name="txt_invite">INVITE</string>
    <string name="txt_noticboard">NOTICE BOARD</string>
    <string name="txt_aliencar">ALIEN CAR</string>
    <string name="txt_maid">MAID</string>
    <string name="txt_complaints">COMPLAINTS</string>
    <string name="txt_emergency">EMERGENCY</string>
    <string name="may_23">May 23</string>
    <string name="_7_00_pm">7:00 PM</string>
    <string name="loreum_ipsum_is_simply_dummy_text_of_the_printing_typesetting_industry">Loreum Ipsum is simply dummy text of the printing typesetting industry</string>
    <string name="party_invite">Party Invite</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="txt_login">SIGN IN</string>
    <string name="forgot_user_id">Forgot user ID</string>
    <string name="forgot_password">Forgot password</string>
    <string name="txt_signup_qstn">Dont have account?</string>

    <string name="user_login">USER LOGIN</string>
    <string name="sign_in_caps">SIGN IN</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="email_id">Email ID</string>
    <string name="sign_up">sign up</string>
    <string name="sign_in">sign in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">LOGIN</string>
    <string name="maid_status">maid status</string>

    <!-- Dialog message -->
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_setting">Settings</string>
    <string name="please_wait">Please wait &#8230;</string>
    <string name="no_internet_msg">This feature requires internet connection. Please check your internet settings and try again.</string>
    <string name="no_internet_msg_main">This Application required internet connection. Please check your internet setting and try again.</string>
    <string name="no_internet_title">No internet</string>
    <string name="unauthorized_access">Unauthorized access</string>
    <string name="select_contact">Select Contact</string>
    <string name="search">Search</string>
    <string name="invite_type">Invite Type</string>
    <string name="venue">Venue</string>
    <string name="phone_numbers">Phone numbers</string>
    <string name="txt_under_dev">Under Development</string>
    <string name="txt_hint_username">Username</string>
    <string name="notification_error_ssl_cert_invalid">You are accessing a page with an
        untrusted or invalid certificate. Do you want to continue?</string>


    <string name="txt_description">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.

Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32."</string>
    <string name="txt_get_details">Get Details</string>
    <string name="txt_call_now">Call</string>
    <string name="invitation_sent_successfully">Invitation Sent Successfully</string>
    <string name="maid_name">Maid Name</string>
    <string name="phone">Phone</string>
    <string name="enter_vehicle_number">Enter Vehicle number</string>
    <string name="vehicle_not_found">Vehicle not found</string>
    <string name="ap29ag1234">AP29AG1234</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_digits">0123456789</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="complaints">Complaints</string>
    <string name="complaints_types">Complaints Types</string>
    <string name="complaint_description">Complaint Description</string>
    <string name="complaint_raised_successfully">Complaint Raised Successfully</string>
    <string name="complaint_closed_successfully">Complaint Closed Successfully</string>
    <string name="done">Done</string>
    <string name="call">Call</string>
    <string name="txt_contacts">Contacts</string>
    <string name="fire_emergency">fire emergency</string>
    <string name="medical_emergency">MEDICAL EMERGENCY</string>
    <string name="in">In</string>
    <string name="out">out</string>
    <string name="not_entered">Not Entered</string>
    <string name="status">status</string>
    <string name="no_events_found">No events Found</string>

    <string name="api">API</string>
    <string name="version">Version</string>
    <string name="message">Message</string>
    <string name="company">Company</string>
    <string name="contact">Contact</string>
    <string name="currently_blank">Currently it\'s fully blank</string>

    <string name="check_in_icon">&#xE837;</string>
    <string name="check_out_icon">&#xE836;</string>
    <string name="invite_people">INVITE PEOPLE</string>
    <string name="other_invites">OTHER INVITES</string>
    <string name="cab_invite">CAB INVITE</string>
    <string name="food_delivery">FOOD DELIVERY</string>
    <string name="goods_delivery">GOODS DELIVERY</string>
    <string name="courier_delivery">COURIER DELIVERY</string>
    <string name="medicine_delivery">MEDICINE DELIVERY</string>
    <string name="home_services">HOME SERVICES</string>
    <string name="please_confirm_your">Please Confirm Your</string>
    <string name="cab_entry_permission">Cab Entry Permission</string>
    <string name="confirm">Confirm</string>
    <string name="invitees">Invitees</string>


</resources>
