<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_20dp"
    tools:context="com.zhour.fragments.AlienCarFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="1"
        android:background="@drawable/ic_invite_event">

        <FrameLayout
            android:id="@+id/fl_alien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp">

            <ImageView
                android:id="@+id/btn_alien"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/txt_cd"
                android:src="@drawable/ic_alien_car_top" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/complaints"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_15sp" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/ll_complaints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fl_alien"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ic_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:minHeight="@dimen/_100dp"
                android:minWidth="@dimen/_100dp"
                android:padding="@dimen/_10dp"
                android:src="@drawable/pump" />

            <EditText
                android:id="@+id/et_complaints_types"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40dp"
                android:layout_marginEnd="@dimen/_25dp"
                android:layout_marginStart="@dimen/_25dp"
                android:layout_marginTop="@dimen/_25dp"
                android:backgroundTint="@color/colorPrimary"
                android:drawableEnd="@drawable/ic_calender"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/complaints_types"
                android:lines="1"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_15sp"
                android:visibility="visible" />


        </LinearLayout>

        <Button
            android:id="@+id/iv_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_20dp"
            android:layout_marginLeft="@dimen/_10dp"
            android:layout_marginRight="@dimen/_10dp"
            android:background="@drawable/ic_button_maid"
            android:gravity="center"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_18sp" />

    </RelativeLayout>
</RelativeLayout>
