<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_20dp"
    android:background="@color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_shape_for_dialog"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_car"
            android:layout_width="@dimen/_130dp"
            android:layout_height="@dimen/_100dp"
            android:layout_gravity="end|top"
            android:layout_margin="@dimen/_15dp"
            android:scaleType="fitXY"
            android:src="@drawable/car_others"
            tools:ignore="RtlHardcoded" />

        <RelativeLayout
            android:id="@+id/ll_bottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250dp"
            android:layout_gravity="center"
            android:background="@drawable/rectangel_bottom"
            android:minHeight="@dimen/_250dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_please_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tv_cab_entry"
                android:layout_marginEnd="@dimen/_15dp"
                android:layout_marginStart="@dimen/_15dp"
                android:layout_marginTop="@dimen/_15dp"
                android:text="@string/please_confirm_your"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sp" />

            <TextView
                android:id="@+id/tv_cab_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/ll_btns"
                android:layout_marginEnd="@dimen/_15dp"
                android:layout_marginStart="@dimen/_15dp"
                android:layout_marginTop="@dimen/_15dp"
                android:text="@string/cab_entry_permission"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/ll_btns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/btn_confirm"
                    android:layout_width="0px"
                    android:layout_height="@dimen/_40dp"
                    android:layout_marginEnd="@dimen/_10dp"
                    android:layout_marginStart="@dimen/_10dp"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/rounded_white_icon"
                    android:minHeight="@dimen/_40dp"
                    android:text="@string/confirm"
                    android:textColor="@color/submit_color"
                    android:textSize="@dimen/_18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="0px"
                    android:layout_height="@dimen/_40dp"
                    android:layout_margin="@dimen/_10dp"
                    android:layout_marginBottom="@dimen/_20dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/rounded_white_icon"
                    android:gravity="center"
                    android:minHeight="@dimen/_40dp"
                    android:text="@string/cancel"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_18sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>