<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_20dp"
    tools:context="com.zhour.fragments.PartyAndIEventInviteFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="1"
        android:background="@drawable/ic_invite_event"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">


            <LinearLayout
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginTop="@dimen/_15dp"
                android:layout_weight="0.8"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tv_party_invite"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="@dimen/_40dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/rectangel_edit_left"
                    android:gravity="center"
                    android:text="@string/invite_people"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_16sp" />

                <View
                    android:layout_width="@dimen/_1dp"
                    android:layout_height="@dimen/_40dp"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:id="@+id/tv_event_invite"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="@dimen/_40dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/rectangel_edit_fill_right"
                    android:gravity="center"
                    android:text="@string/other_invites"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_16sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/iv_date"
                android:layout_width="@dimen/_0dp"
                android:layout_height="@dimen/_40dp"
                android:layout_marginTop="@dimen/_15dp"
                android:layout_weight="0.2"
                android:padding="@dimen/_5dp"
                android:src="@drawable/ic_date" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_list_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_parent"
            android:layout_marginTop="@dimen/_10dp"
            android:orientation="vertical"
            android:visibility="gone">

            <ListView
                android:id="@+id/list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_5dp"
                android:layout_marginTop="@dimen/_5dp"
                android:divider="@color/colorPrimary" />

            <TextView
                android:id="@+id/tv_no_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/no_events_found"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_20sp"
                android:visibility="gone" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_submit"
            android:layout_below="@+id/ll_parent">

            <RelativeLayout
                android:id="@+id/rl_parent_invite_other"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible">

                <include layout="@layout/layout_include_other_invites" />

                <include layout="@layout/layout_include_invite_people" />

            </RelativeLayout>
        </ScrollView>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/_15dp"
            android:layout_marginEnd="@dimen/_30dp"
            android:layout_marginStart="@dimen/_30dp"
            android:background="@drawable/ic_button_invite"
            android:gravity="center"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15sp" />
    </RelativeLayout>


</RelativeLayout>
